lldpd (0.6.1)
  * Features:
    + Provide liblldpctl.so, a library to interface with lldpd. The
      documentation is provided through Doxygen. See src/lib/lldpctl.h
      which contains all the exported functions.
    + Make lldpctl uses liblldpctl.so.
    + Add a "watch" option to lldpctl to monitor neighbor changes.

lldpd (0.6)
  * Features:
    + Allow lldpctl to display hidden ports.
    + Add a switch to specify interfaces to use to get chassis ID.
    + Support for multiple management addresses and IPv6 management
      addresses. Contributed by João Valverde.
  * Global changes:
    + Switch to libevent. See README.md for details.
    + Partial rewrite of the SNMP part. Less code.
    + Unit tests for SNMP.
    + Major rewrite of the protocol between lldpd and lldpctl. Less
      code.
  * Fixes:
    + Several small SNMP fixes (discovered by unit tests).

lldpd (0.5.7)
 * Fixes:
    + Configure issue with NetSNMP and some linkers
    + Fix infinite loop for the receive part: on certain conditions,
      lldpd will stop sending packets and stop updating local data.

lldpd (0.5.6)
  * Features:
    + Send and receive native VLAN TLV with CDP
    + Add a whitelist for some drivers (currently: dsa and veth)
  * Fixes:
    + Compilation issues with NetSNMP 5.7 (and with earlier versions too)
    + Small optimization of BPF filter

lldpd (0.5.5)
  * Features:
    + Support for PPVID and PI Dot1 TLV, thanks to Shuah Khan.
    + Extend whitelist with possibility to blacklist.
  * Fixes:
    + Key/value output was incorrect when a dot was present in
      interface names. This is fixed but it is preferable to use XML
      output since the parsing is more difficult in this case.
    + Only grab DMI information once. Only uses DMI for x86 platform.
    + Padding issues with socket protocol. This introduces a change in
      the socket protocol!
    + Fix a segfault when neither /etc/os-release nor lsb_release
      are available.

lldpd (0.5.4)
  * Features: